--- a/app/src/main/res/layout/activity_city_manager.xml
+++ b/app/src/main/res/layout/activity_city_manager.xml
@@ -6,7 +6,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary">
 
         <Button
             android:id="@+id/add_city"
